external-crates/move/move-compiler/tests/move_check/typing/assign_nested.exp
warning[W09002]: unused variable
   ┌─ tests/move_check/typing/assign_nested.move:10:13
   │
10 │         let x: u64;
   │             ^ Unused local variable 'x'. Consider removing or prefixing with an underscore: '_x'

error[E01009]: invalid assignment
   ┌─ tests/move_check/typing/assign_nested.move:14:19
   │
14 │         (_, x, _, s.f) = four();
   │                   ^^^ Invalid assignment syntax. Expected: a local, a field write, or a deconstructing assignment

